--- a/views/index.html
+++ b/views/index.html
@@ -5,7 +5,7 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width,initial-scale=1.0">
   <link rel="icon" href="favicon.ico">
-  <title>vue-demo</title>
+  <title>个人笔记站</title>
   <style>
 body {
     background-color: rgba(53,53,53,1.00);
