--- a/views/个人练习VUE版.html
+++ b/views/个人练习VUE版.html
@@ -6,13 +6,13 @@
     <meta http-equiv=X-UA-Compatible content="IE=edge">
     <meta name=viewport content="width=device-width,initial-scale=1">
     <link rel=icon href=/favicon.ico> <title>个人练习VUE版</title>
-    <link href=/css/shopping/shopping.314c291d.css rel=preload as=style>
+    <link href=/css/vueapp/vueapp.ec919e9b.css rel=preload as=style>
     <link href=/js/chunk-vendors.2603808f.js rel=preload as=script>
-    <link href=/js/shopping/shopping.942d77fe.js rel=preload as=script>
-    <link href=/css/shopping/shopping.314c291d.css rel=stylesheet>
+    <link href=/js/vueapp/vueapp.2fbdefe4.js rel=preload as=script>
+    <link href=/css/vueapp/vueapp.ec919e9b.css rel=stylesheet>
 </head>
 
 <body><noscript><strong>本网页需要 JavaScript 才能运行，请开启 JavaScript 后刷新重试。</strong></noscript>
     <div id=app></div>
-    <script src=/js/chunk-vendors.2603808f.js> </script> <script src=/js/shopping/shopping.942d77fe.js> </script>
-        </body> </html>
+    <script src=/js/chunk-vendors.2603808f.js> </script> <script src=/js/vueapp/vueapp.2fbdefe4.js> </script> </body>
+        </html>
