--- a/views/个人练习VUE版.html
+++ b/views/个人练习VUE版.html
@@ -1,18 +1,1 @@
-<!DOCTYPE html>
-<html lang=zh-cmn-Hans>
-
-<head>
-    <meta charset=utf-8>
-    <meta http-equiv=X-UA-Compatible content="IE=edge">
-    <meta name=viewport content="width=device-width,initial-scale=1">
-    <link rel=icon href=/favicon.ico> <title>个人练习VUE版</title>
-    <link href=/css/vueapp/vueapp.ec919e9b.css rel=preload as=style>
-    <link href=/js/chunk-vendors.2603808f.js rel=preload as=script>
-    <link href=/js/vueapp/vueapp.2fbdefe4.js rel=preload as=script>
-    <link href=/css/vueapp/vueapp.ec919e9b.css rel=stylesheet>
-</head>
-
-<body><noscript><strong>本网页需要 JavaScript 才能运行，请开启 JavaScript 后刷新重试。</strong></noscript>
-    <div id=app></div>
-    <script src=/js/chunk-vendors.2603808f.js> </script> <script src=/js/vueapp/vueapp.2fbdefe4.js> </script> </body>
-        </html>
+<!DOCTYPE html><html lang=zh-cmn-Hans><head><meta charset=utf-8><meta http-equiv=X-UA-Compatible content="IE=edge"><meta name=viewport content="width=device-width,initial-scale=1"><link rel=icon href=/favicon.ico><title>个人练习VUE版</title><link href=/css/chunk-2fb4ef40.abe071bb.css rel=prefetch><link href=/css/chunk-3335eb96.a8da954b.css rel=prefetch><link href=/css/chunk-3bd8ab70.c6f7fff0.css rel=prefetch><link href=/css/chunk-54997d98.4877690e.css rel=prefetch><link href=/css/chunk-7e247cc2.cf7f4dad.css rel=prefetch><link href=/js/about.925655e0.js rel=prefetch><link href=/js/chunk-2d230f9d.4a4f61c9.js rel=prefetch><link href=/js/chunk-2fb4ef40.c0b0b863.js rel=prefetch><link href=/js/chunk-3335eb96.fbc22e6c.js rel=prefetch><link href=/js/chunk-3bd8ab70.ceb7ef95.js rel=prefetch><link href=/js/chunk-3f9af0f9.6986b512.js rel=prefetch><link href=/js/chunk-54997d98.64d14ec8.js rel=prefetch><link href=/js/chunk-7e247cc2.291a02ab.js rel=prefetch><link href=/css/vueapp/vueapp.f0a6a3f1.css rel=preload as=style><link href=/js/chunk-vendors.2603808f.js rel=preload as=script><link href=/js/vueapp/vueapp.5c3d5375.js rel=preload as=script><link href=/css/vueapp/vueapp.f0a6a3f1.css rel=stylesheet></head><body><noscript><strong>本网页需要 JavaScript 才能运行，请开启 JavaScript 后刷新重试。</strong></noscript><div id=app></div><script src=/js/chunk-vendors.2603808f.js></script><script src=/js/vueapp/vueapp.5c3d5375.js></script></body></html>
